@@ -1,3 +1,4 @@
+Made the columns go away in the game if the user gets the correct answer.
 Added logging of challenge number as a parameter in 'challengePresented' message.
 # 1.03.13 (73052) May 17, 2013
 5/17/13 Deploying to dev for testing by research team
